# orksim_soc_systemc

./: .gitignore
install/docs/sysc/doxygen/: Doxyfile
install/lib-linux64/: libsystemc.la
install_sc/docs/tlm/doxygen/: Doxyfile
install_sc/lib-linux64/: libsystemc.la
install_sc/lib-linux64/pkgconfig/: systemc.pc  tlm.pc
or1ksim/: hello.elf
or1ksim/or1k-elf/lib/: libcc1.la  libcc1.so.0.0.0
or1ksim/or1k-elf/or1k-elf/include/: newlib.h
or1ksim/or1k/lib/: libsim.la  libsim.so.0.0.0
or1ksim/or1k/share/info/: dir  (+1 more)
systemc-3.0.1/: Makefile.in  aclocal.m4  configure~
systemc-3.0.1/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
systemc-3.0.1/docs/: Makefile.in
systemc-3.0.1/examples/: Makefile.in
systemc-3.0.1/examples/sysc/: Makefile.in
systemc-3.0.1/examples/tlm/: Makefile.in
systemc-3.0.1/lib-linux64/: libsystemc.la
systemc-3.0.1/lib-linux64/pkgconfig/: systemc.pc  tlm.pc
systemc-3.0.1/src/: Makefile.in
systemc-3.0.1/src/sysc/: Makefile.in
systemc-3.0.1/src/tlm_core/: Makefile.in
systemc-3.0.1/src/tlm_utils/: Makefile.in
systemc_test/mytest/: Makefile  mytest  mytest.cpp  ttt  wave.vcd
tlm/: esp1-tlm2-or1ksim-examples-2.0.tar.bz2  kill.sh  readme.txt
tlm/esp1/: CMakeLists.txt  or1ksim.cfg
tlm/esp1/intr-soc/: CMakeLists.txt  intrSocMainSC.cpp
tlm/esp1/logger/: CMakeLists.txt  Or1ksimSC.cpp
tlm/esp1/progs-or32/: logger-test.elf  uart-loop.c  uart-loop.elf
tlm/esp1/simple-soc/: CMakeLists.txt  Or1ksimExtSC.cpp  TermSC.cpp  UartSC.cpp
tlm/esp1/sync-soc/: CMakeLists.txt  UartSyncSC.cpp
(+39 files in other folders)
